k8s/Freelancer-service/freelancer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freelancer
spec:
  selector:
    app: freelancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
